--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,10 +5,7 @@
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// Components
+@import 'components/button.scss';
+@import 'components/table.scss';
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
