--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,27 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+.container {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.section {
+    width: 80%;
+}
 
 // Variables
 @import 'variables';
@@ -8,4 +29,7 @@
 // Components
 @import 'components/button.scss';
 @import 'components/table.scss';
+@import 'components/forms.scss';
 
+// Partials
+@import 'partials/nav.scss';
