--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -18,3 +18,9 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$danger: #e3342f;
+$success: #38c172;
+$danger-dark: #b2221e;
+$success-dark: #30a05f;
+$icon-white: #ffffff;
+$link-white: #ffffff;
